--- a/Report.Rmd
+++ b/Report.Rmd
@@ -47,11 +47,11 @@ scale_fill_discrete = scale_fill_viridis_d
 suppressPackageStartupMessages(library(sf))
 ```
 
+```{=html}
 <style type="text/css">
 </style>
-
-
-&nbsp;
+```
+ 
 
 # Motivation
 
@@ -63,7 +63,7 @@ Superfund sites are areas designated by the EPA that are contaminated with hazar
 
 -   "The presence of Superfund sites as a determinant of life expectancy in the United States" from Nature Communications- [Link](https://www.nature.com/articles/s41467-021-22249-2)
 
-&nbsp;
+ 
 
 ## Initial Questions
 
@@ -72,7 +72,7 @@ Superfund sites are areas designated by the EPA that are contaminated with hazar
 3.  Does county level Superfund site score affect both cancer and asthma outcomes?
 4.  What is the geographic spread of Superfund sites in Pennsylvania?
 
-&nbsp;
+ 
 
 # Data
 
@@ -83,7 +83,6 @@ Superfund sites are areas designated by the EPA that are contaminated with hazar
 -   *EPA National Priorities List (NPL)* - [Link](https://www.epa.gov/superfund/search-superfund-sites-where-you-live)
 
 -   *Pennsylvania Spatial Data Access*- [Link](https://www.pasda.psu.edu/uci/DataSummary.aspx?dataset=24)
-
 
 ### Variables
 
@@ -122,7 +121,7 @@ This dataset was used as a shapefile for Pennsylvania state and its counties
 -   `shape_area`
 -   `geometry`
 
-&nbsp;
+ 
 
 ### Data Cleaning
 
@@ -130,20 +129,19 @@ The CDC PLACES and EPA NPL datasets were cleaned in a similar fashion. Both data
 
 For the exploratory analyses, the two datasets were then joined by `county` and tidy datasets were used to analyze the outcomes between counties with superfund sites versus counties without superfund sites.
 
-
 All datasets were available as either a CSV file or a shapefile, so no data scraping was necessary for our analysis. Each dataset was cleaned to focus on our variables of interest within Pennsylvania.
 
-&nbsp;
+ 
 
 # Exploratory Analysis
 
-&nbsp;
+ 
 
 ### *EPA National Priorities List (NPL) Data*
 
 The exploratory analysis for the EPA NPL dataset was used to give context to the number of Superfund sites in PA, the mean site score, and where they were located geographically.
 
-&nbsp;
+ 
 
 #### **Number of Superfunds by County**
 
@@ -180,9 +178,9 @@ aes(x = reorder(county, -n_superfund), y = n_superfund, color = county, fill = c
 ggplotly(superfund_count)
 ```
 
-&nbsp;
+ 
 
-#### **County Level Mean Superfund Site Score** 
+#### **County Level Mean Superfund Site Score**
 
 The EPA utilizes a Hazard Ranking System (HRS) to determine the site score, which is used to place sites on the National Priorities List (NPL). The NPL is a list of hazardous waste sites in the US that are eligible for long-term clean-up financed under the federal Superfund program. For a site to be on the NPL, the site must have a score greater than 28.5 on a scale of 0 to 100 where the site is judged upon the likelihood that it has released or has the potential to release hazardous waste into the environment, toxicity of the waste, and the people or environments that are affected by the waste. A higher score indicates higher risk of waste release. This table provides the average site score among all sites in Pennsylvania as well as the lowest and highest site scores.
 
@@ -215,9 +213,9 @@ superfund_stat =
 superfund_stat
 ```
 
-&nbsp;
+ 
 
-#### **Location of Superfunds in PA** 
+#### **Location of Superfunds in PA**
 
 We wanted to explore the location of the Superfund sites to determine whether they were randomly distributed or clustered in certain areas in the state of PA. From the plots below, we can see that a majority of the Superfunds are located in the Southeastern portion of Pennsylvania and the ones with the highest site scores are also located in that region.
 
@@ -323,7 +321,7 @@ superfund_geo =
 ggplotly(superfund_geo)
 ```
 
-&nbsp;
+ 
 
 ### *CDC PLACES Data*
 
@@ -401,7 +399,7 @@ ggplotly(cancer_plot)
 
 \*\* Red Line: national cancer prevalence calculated from CDC dataset with all states.
 
-&nbsp;
+ 
 
 #### **Assessment of Linear Relationship between Cancer and Asthma Outcomes with Other Health Outcomes**
 
@@ -583,9 +581,9 @@ cancer_predict_panel +
   plot_layout(guides = "collect")
 ```
 
-&nbsp;
+ 
 
-#### **Comparison of Health Outcomes for Counties With and Without Superfund Sites** 
+#### **Comparison of Health Outcomes for Counties With and Without Superfund Sites**
 
 We also wanted to explore if cancer outcomes and asthma outcomes were different based on whether a county had a Superfund in their county lines. Based on the plot below, it seems like the the median values for cancer, asthma, and healthcare access are similar among counties with Superfund sites and counties without Superfund sites in their jurisdiction.
 
@@ -626,7 +624,7 @@ asthma_superfund =
 asthma_superfund 
 ```
 
-&nbsp;
+ 
 
 # Regression Analysis
 
@@ -713,9 +711,7 @@ We evaluated the cancer crude counts (total number of individuals who had cancer
 
 #### *Confounder Selection: Analyze these values:*
 
-
 We hypothesized this was a function of population size in urban cities. We also believed that the cancer counts may have had to do with potentially more toxic superfund sites. Finally, we were interested in the potential for SES (ie access to insurance), behavioral factors like smoking, and health attributes like depression could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
-
 
 `Total Population`
 
@@ -906,6 +902,10 @@ combined_data_final%>%
   dplyr::select(estimate, p.value)%>% 
   knitr::kable(digits = 3)
 ```
+
+# Interactive Maps (Shiny)
+
+The interactive maps were produced using the `leaflet` package, and utilized the combined health outcome and PA county-level geographic dataset produced in the data cleaning step, alongside the superfund site geographic data. A helper function for creating the 'labels', i.e. the fill intensities of the counties determined by asthma or cancer prevalence. On hover the maps show the county name, number of superfund sites, mean site score and prevalence for that county. Superfund sites are indicated with markers that show the name of the site on hover. The base map is from OpenStreetMap.
 
 # Discussion
 
