--- a/asthma_regression.Rmd
+++ b/asthma_regression.Rmd
@@ -7,7 +7,7 @@ output:
     toc_float: true
 ---
 
-```{r, echo=FALSE, show_col_types = FALSE, message =FALSE, error =FALSE}
+```{r error=FALSE, message=FALSE, include=FALSE, show_col_types=FALSE}
 library(tidyverse)
 library(modelr)
 library(mgcv)
