--- a/Health_Outcomes_Exploratory_Analysis.Rmd
+++ b/Health_Outcomes_Exploratory_Analysis.Rmd
@@ -353,7 +353,7 @@ asthma_superfund =
   layout(boxmode = "group") %>% 
   layout(
     xaxis = list(title = "Presence of Superfund in County"),
-   title = "Comparison of County Level Cancer, Asthma Prevalence, and Lack of Health Insurance By Superfund Presence",
+   title = "Prevalence of Cancer, Asthma, and Lack of Health Insurance By Superfund Presence",
    yaxis = list(title = "Crude Prevalence")) 
 
 asthma_superfund 
