--- a/asthma_regression.Rmd
+++ b/asthma_regression.Rmd
@@ -99,11 +99,11 @@ combined_data_final=
 
 ## Outcome: Asthma Prevalence
 
-The data provided is at the state-level, however it was converted to county-level for the purpose of this model. We were originally given the The outcome of interest is the number of individuals with asthma in a 1 year period by county differed by county.As this was count data, Poisson Regression with a log link function was utilized.No offset term was utilized in the data as count data is modeled. 
+The data provided is at the state-level, however it was converted to county-level for the purpose of this model. We were originally given the The outcome of interest is the number of individuals with asthma in a 1 year period by county differed by county. As this was count data, Poisson Regression with a log link function was utilized. No offset term was utilized in the data as count data is modeled. 
 
 # Crude Model
 
-We evaluated the  cancer crude counts (total number of individuals who had asthma by county) with counties with larger urban centers having higher cancer counts Upon running the Poisson regression model with a log link function, we found increased asthma prevalence, with the greatest occurring among Philadelphia county (RR: 18.468, 95% CI (18.280, 18.658)). 
+We evaluated the  cancer crude counts (total number of individuals who had asthma by county) with counties with larger urban centers having higher cancer counts. Upon running the Poisson regression model with a log link function, we found increased asthma prevalence, with the greatest occurring among Philadelphia county (RR: 18.468, 95% CI (18.280, 18.658)). 
 
 ```{r}
   combined_data_final %>% 
@@ -123,7 +123,7 @@ We evaluated the  cancer crude counts (total number of individuals who had asthm
 
 # Confounder Selection
 
-We hypothesized this was a function of population size in urban cities. We also believed that the asthma counts may have had to do with potentially more toxic Superfund sites. Finally, we were interested in the potential for SES (IE access to insurance), behavioral factors like smoking, and health attributes like asthma could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
+We hypothesized this was a function of population size in urban cities. We also believed that the asthma counts may have had to do with potentially more toxic Superfund sites. Finally, we were interested in the potential for SES (i.e. access to insurance), behavioral factors like smoking, and health attributes like asthma could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
 
 `Total Population`
 ```{r}
@@ -135,7 +135,7 @@ combined_data_final %>%
 ```
 
 
-`superfund site score`
+`Superfund Site Score`
 ```{r}
 combined_data_final %>% 
   glm(asthma_population ~site_score, data = .,family = poisson(link='log'))%>%
@@ -151,7 +151,7 @@ combined_data_final %>%
   knitr::kable(digits = 3)
 ```
 
-`Insurance_Status`, 
+`Insurance Status`, 
 ```{r}
   combined_data_final %>% 
   glm(asthma_population ~ insurance_population, data = .,family = poisson(link='log'))%>%
@@ -176,7 +176,7 @@ After adjustment for these factors we find that our confounding factors (includi
 
 
 ```{r}
-  combined_data_final %>% 
+combined_data_final %>% 
   glm(asthma_population ~ total_population+insurance_population+depression_population+smoking_population+site_score*county, data = .,family = poisson(link = 'log'))%>%
   broom::tidy()%>%
   mutate(
