--- a/Cancer_regression.Rmd
+++ b/Cancer_regression.Rmd
@@ -122,7 +122,7 @@ combined_data_final %>%
   knitr::kable(digits = 3)
 ```
 
-# Confounder Selection:
+# Confounder Selection
 
 We hypothesized this was a function of population size in urban cities. We also believed that the cancer counts may have had to do with potentially more toxic superfund sites. Finally, we were interested in the potential for SES (ie access to insurance), behavoral factors like smoking, and health attributes like asthma could potentially confound our study.Therefore, we opted to explore whether county population size was impacting this relationship.
 
